; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_lfs.c_dir_iter_factory.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_lfs.c_dir_iter_factory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32*, i32, i64 }

@DIR_METATABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"cannot open %s: %s\00", align 1
@errno = common dso_local global i32 0, align 4
@dir_iter = common dso_local global i32 0, align 4
@MAX_DIR_LENGTH = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @dir_iter_factory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dir_iter_factory(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i8* @luaL_checkstring(i32* %5, i32 1)
  store i8* %6, i8** %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 @lua_newuserdata(i32* %7, i32 32)
  %9 = inttoptr i64 %8 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %9, %struct.TYPE_2__** %4, align 8
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 3
  store i64 0, i64* %11, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @DIR_METATABLE, align 4
  %14 = call i32 @luaL_getmetatable(i32* %12, i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @lua_setmetatable(i32* %15, i32 -2)
  %17 = load i8*, i8** %3, align 8
  %18 = call i32* @opendir(i8* %17)
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  store i32* %18, i32** %20, align 8
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %31

25:                                               ; preds = %1
  %26 = load i32*, i32** %2, align 8
  %27 = load i8*, i8** %3, align 8
  %28 = load i32, i32* @errno, align 4
  %29 = call i32 @strerror(i32 %28)
  %30 = call i32 (i32*, i8*, i8*, ...) @luaL_error(i32* %26, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %27, i32 %29)
  br label %31

31:                                               ; preds = %25, %1
  %32 = load i32*, i32** %2, align 8
  %33 = load i32, i32* @dir_iter, align 4
  %34 = call i32 @lua_pushcclosure(i32* %32, i32 %33, i32 1)
  ret i32 1
}

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i64 @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @luaL_getmetatable(i32*, i32) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1

declare dso_local i32* @opendir(i8*) #1

declare dso_local i32 @luaL_error(i32*, i8*, i8*, ...) #1

declare dso_local i32 @strerror(i32) #1

declare dso_local i32 @lua_pushcclosure(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
